<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="subject_email_template">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email_template">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_template">khabiev2012@yandex.ru</string>
    <string name="eula_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_edit_text">Очистить поиск</string>
    <string name="search_empty">Ничего не нашлось</string>
    <string name="search_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_retry_btn">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="placeholder_track_time_progress">00:30</string>
    <string name="track_time_progress_zero">00:00</string>
    <string name="track_time_title">Длительность</string>
    <string name="collection_name_title">Альбом</string>
    <string name="release_date_title">Год</string>
    <string name="primary_genre_name_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist_placeholder">Вы не создали\nни одного плейлиста</string>
    <string name="empty_library_placeholder">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="cover_placeholder_content_description">Обложка трека</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="name_required">Название*</string>
    <string name="new_playlist_exit_warning">Завершить создание плейлиста?</string>
    <string name="new_playlist_exit_warning_body">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Завершить</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="zero">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минут</item>
        <item quantity="many">%d минут</item>
        <item quantity="zero">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="create_playlist_success">Плейлист %s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="negative">Нет</string>
    <string name="positive">Да</string>
    <string name="remove_track_warning">Удалить трек?</string>
    <string name="remove_track_warning_body">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="remove">Удалить</string>
    <string name="share_title">Поделиться</string>
    <string name="edit_playlist_title">Редактировать информацию</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="remove_playlist_warning">Удалить плейлист</string>
    <string name="remove_playlist_warning_body">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_no_tracks">В плейлисте нет треков</string>
</resources>