<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/main_title"
        android:textFontWeight="500"
        android:textSize="@dimen/text_h1_22sp" />

    <Button
        android:id="@+id/btn_search"
        style="@style/PlaylistMakerMainButton"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/btn_library"
        style="@style/PlaylistMakerMainButton"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/PlaylistMakerMainButton"
        android:text="@string/settings"
        app:icon="@drawable/settings" />
</LinearLayout>