<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.presentation.ui.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        style="@style/PlaylistMakerToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search" />

    <FrameLayout
        android:id="@+id/search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin_16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_search">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_edit_text"
            style="@style/PlayListMakerSearchEditText" />

        <ImageView
            android:id="@+id/clear_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/clear_edit_text"
            android:src="@drawable/ic_menu_close_clear_cancel"
            android:visibility="gone"
            app:drawableTint="@color/edit_text_search_icon"
            app:tint="@color/edit_text_search_icon" />
    </FrameLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/placeholder_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="search_placeholder_img, search_placeholder_text, search_retry_btn" />

    <ImageView
        android:id="@+id/search_placeholder_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="112dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar_container"
        tools:src="@drawable/error_search_placeholder" />

    <TextView
        android:id="@+id/search_placeholder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textFontWeight="400"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/search_placeholder_img"
        tools:layout_editor_absoluteX="24dp"
        tools:text="@string/search_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_retry_btn"
        style="@style/PlaylistMaker.Button.UnelevatedButton.RoundedCorner"
        android:text="@string/search_retry_btn"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_placeholder_text"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/history_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="search_history_title, clear_history_btn" />

    <TextView
        android:id="@+id/search_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/default_padding_16dp"
        android:text="@string/search_history_title"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/search_bar_container" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/clear_history_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_history_title"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"
        tools:itemCount="10"
        tools:listitem="@layout/item_recyclerview_search_activity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_history_btn"
        style="@style/PlaylistMaker.Button.UnelevatedButton.RoundedCorner"
        android:text="@string/search_history_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_list_rv" />

    <ProgressBar
        android:id="@+id/search_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:indeterminateTint="@color/progress_bar_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar_container" />

</androidx.constraintlayout.widget.ConstraintLayout>