<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_player"
        style="@style/PlaylistMakerToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back" />

    <ImageView
        android:id="@+id/cover_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_player"
        tools:src="@drawable/cover_player_placeholder" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/player_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/add_to_collection"
        app:layout_constraintBottom_toBottomOf="@id/player_control"
        app:layout_constraintEnd_toStartOf="@id/player_control"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/player_control" />

    <ImageView
        android:id="@+id/player_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/play"
        app:layout_constraintBottom_toTopOf="@id/track_time_progress"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/favorite_inactive"
        app:layout_constraintBottom_toBottomOf="@id/player_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_control"
        app:layout_constraintTop_toTopOf="@id/player_control" />

    <TextView
        android:id="@+id/track_time_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/placeholder_track_time_progress"
        android:textColor="@color/text_player"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/track_time_title"
        app:layout_constraintEnd_toEndOf="@id/player_control"
        app:layout_constraintStart_toStartOf="@id/player_control" />

    <TextView
        android:id="@+id/track_time_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/track_time_title"
        android:textColor="@color/info_title_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/collection_name_title"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start" />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/collection_name"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="5:35" />

    <TextView
        android:id="@+id/collection_name_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/collection_name_title"
        android:textColor="@color/info_title_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/release_date_title"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start" />

    <TextView
        android:id="@+id/collection_name"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/release_date"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/release_date_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/release_date_title"
        android:textColor="@color/info_title_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/primary_genre_name_title"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/primary_genre_name"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"

        app:layout_constraintStart_toEndOf="@+id/barrier"

        tools:text="1965" />

    <TextView
        android:id="@+id/primary_genre_name_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/primary_genre_name_title"
        android:textColor="@color/info_title_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/country_title"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start" />

    <TextView
        android:id="@+id/primary_genre_name"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country_title"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:text="@string/country_title"
        android:textColor="@color/info_title_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start" />

    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@color/text_player"
        android:textFontWeight="400"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="Великобритания" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_24dp_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_16dp_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_24dp_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collection_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="collection_name_title,collection_name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="track_time_title,
        collection_name_title,
        release_date_title,
        primary_genre_name_title,
        country_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>